--- a/JavaNeutrons/pom.xml
+++ b/JavaNeutrons/pom.xml
@@ -31,6 +31,12 @@
             <artifactId>fxyz3d-importers</artifactId>
             <version>0.5.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
