--- a/JavaNeutrons/pom.xml
+++ b/JavaNeutrons/pom.xml
@@ -37,6 +37,11 @@
             <version>2.8.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.gilecode.yagson</groupId>
+            <artifactId>j9-reflection-utils</artifactId>
+            <version>[1.0,)</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
