--- a/JavaNeutrons/pom.xml
+++ b/JavaNeutrons/pom.xml
@@ -37,6 +37,12 @@
             <version>2.8.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>12.0.1</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
