Misc, "Concrete" material

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,6 @@ FusorCompModeling/nbproject/private/private.properties
 FusorCompModeling/nbproject/private/private.properties
 FusorCompModeling/nbproject/private/private.properties
 FusorVis/nbproject/private/private.properties
+FusorCompModeling/nbproject/private/private.properties
+FusorCompModeling/nbproject/private/private.properties
+FusorVis/nbproject/private/private.properties
